# matcha-analytics

./: .env  Cargo.toml  Dockerfile  README.md  configuration.yaml  fly.toml
.cargo/: config.toml
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
migrations/: 20240310120805_create_subscriptions.sql  20240319201727_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh  install_tools.sh  test_info.sh  watch.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs  subscriptions_confirm.rs
