[package]
name = "matcha_analytics"
version = "0.1.0"
authors = ["Milan Gruner <milangruner@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "matcha_analytics"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
config = "0.14"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
env_logger = "0.11"
log = "0.4"
tracing = { version = "0.1", features = ["log"] }

[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]
