[package]
name = "matcha_analytics"
version = "0.1.0"
authors = ["Milan Gruner <milangruner@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "matcha_analytics"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7.3", default-features = false, features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = "0.14"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-actix-web = "0.7"
once_cell = "1"
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = "4"
unicode-segmentation = "1"
validator = "0.17"

[dev-dependencies]
claims = "0.7"
fake = "2.9"
quickcheck = "1.0"
quickcheck_macros = "1.0"
rand = "0.8"
rand_core = "0.6"
wiremock = "0.6"
linkify = "0.10"

[profile.release]
strip = true # Automatically strip symbols from binary
